# clir_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt
.github/workflows/: release.yml
src/: ansi.rs  ascii_codes.rs  cell.rs  charsets.rs  color.rs  lib.rs  main.rs  outputs.rs  tests.rs
