[package]
name = "clir_rs"
version = "0.1.1-alpha"
edition = "2021"

authors = ["ultraflame4 <ultraflame4@gmail.com>"]
license = "MIT"
description = "Renders an image to the console as unicode art"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_colours = "1.2.2"
ansi_term = "0.12.1"
argh = "0.1.12"
bytemuck = "1.15.0"
image = "0.25.1"
termsize = "0.1.6"
